--- a/ns.yaml
+++ b/ns.yaml
@@ -16,3 +16,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: tools
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cdf-interne
+  labels:
+    private-gw: enabled
