--- a/ns.yaml
+++ b/ns.yaml
@@ -1,25 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: app
-  labels:
-    public-gw: enabled
+  name: app1
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: cdf
-  labels:
-    private-gw: enabled
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: tools
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: cdf-interne
-  labels:
-    private-gw: enabled
+  name: app2
