--- a/ns.yaml
+++ b/ns.yaml
@@ -1,9 +1,19 @@
 apiVersion: v1
-kind: Namespace
+kind: Service
 metadata:
-  name: app1
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: app2
+  annotations:
+    cloud.google.com/neg: '{"ingress":true}'
+  labels:
+    app: nginx-1
+  name: nginx-demo
+  namespace: demo
+spec:
+  ports:
+  - name: 80-80
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: nginx-1
+  sessionAffinity: None
+  type: ClusterIP
